--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&family=Montserrat:wght@200&family=Sacramento&display=swap"
     rel="stylesheet">
+  <link rel="icon" href="https://img.icons8.com/ios-glyphs/344/cat-profile--v1.png">
 </head>
 
 <body>
